--- a/package.json
+++ b/package.json
@@ -20,19 +20,24 @@
     "expo-router": "~5.0.3",
     "expo-splash-screen": "~0.30.7",
     "expo-status-bar": "~2.2.3",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.515.0",
     "lucide-react-native": "^0.515.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-native": "0.79.1",
     "react-native-dotenv": "^3.4.11",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-maps": "1.20.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "~4.10.0",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/leaflet": "^1.9.18",
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
   },
