Connected app to agri data json

--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
     "@react-navigation/bottom-tabs": "^7.3.15",
     "@react-navigation/stack": "^7.3.3",
     "axios": "^1.9.0",
-    "expo": "^53.0.4",
+    "expo": "^53.0.11",
+    "expo-asset": "~11.1.5",
     "expo-constants": "~17.1.4",
+    "expo-file-system": "~18.1.10",
     "expo-font": "^13.3.1",
     "expo-linking": "~7.1.4",
     "expo-router": "~5.0.3",
     "expo-splash-screen": "~0.30.7",
     "expo-status-bar": "~2.2.3",
+    "install": "^0.13.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.515.0",
     "lucide-react-native": "^0.515.0",
+    "npx": "^10.2.2",
+    "papaparse": "^5.5.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-leaflet": "^5.0.0",
