--- a/app.json
+++ b/app.json
@@ -2,7 +2,8 @@
   "expo": {
     "scheme": "acme",
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-asset"
     ],
     "name": "agrimarketja",
     "slug": "agrimarketja"
