--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "19.0.0",
     "react-leaflet": "^5.0.0",
     "react-native": "0.79.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.24.0",
